style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

*,
*::before,
*::after {
    box-sizing: border-box;
}

* {
    margin: 0;
    padding: 0;
    color: #F9FAF8;
}

.header {
    display: flex;
    /* justify-content: space-between; */
    align-items: center;
    padding: 20px;
}

.header,
.hero,
.footer {
    background-color: #1F2937;
}

.header-logo {
    font-size: 24px;
    margin-right: auto;
}

.header-link,
.hero-left {
    color: #E5E7EB;
    font-size: 18px;
}

.hero-left h1 {
    font-size: 48px;
    font-weight: 900;
}

button,
.cta {
    background-color: #3882F6;
}

.info,
.info *,
.quote {
    color: #1F2937;
    font-size: 36px;
}

.info h1 {
    font-weight: 900;
}
.tiles {
    font-size: 18px;
}

img {
    width: 100px;
    height: 100px;
    border: 5px solid #3882F6;
    border-radius: 10%;
}

.quote {
    background-color: #E5E7EB;
    font-weight: 300;
}

.cta {
    margin: 50px;
}

